--- a/Tutorials/curso/pom.xml
+++ b/Tutorials/curso/pom.xml
@@ -17,6 +17,9 @@
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+	<!--Here goes all the dependencies used in this project
+		Any time that you need a new library, you must add it here
+	-->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
