--- a/Tutorials/curso/src/main/resources/application.properties
+++ b/Tutorials/curso/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#General
+server.port = 8080
+#
+#Database
+spring.datasource.url=jdbc:mysql://localhost:3306/courseDatabase?useSSL=false
+spring.datasource.dbname=courseDatabase
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
