--- a/Tutorials/curso/pom.xml
+++ b/Tutorials/curso/pom.xml
@@ -54,7 +54,18 @@
 			<version>8.0.25</version>
 			<scope>runtime</scope>
 		</dependency>
-    </dependencies>
+		<!-- Adding Lombok it is used to create setters and getters easier -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.20</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
