--- a/Tutorials/curso/pom.xml
+++ b/Tutorials/curso/pom.xml
@@ -67,6 +67,12 @@
 			<artifactId>argon2-jvm</artifactId>
 			<version>2.5</version>
 		</dependency>
+		<!-- jjwt it is used to create sessions -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
