modified to support JWT variables

--- a/Tutorials/curso/src/main/resources/application.properties
+++ b/Tutorials/curso/src/main/resources/application.properties
@@ -7,5 +7,12 @@ spring.datasource.dbname=courseDatabase
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#JWT
+security.jwt.secret= secretword
+#Which service created this jwt
+security.jwt.issuer= Main
+#Time in milliseconds
+security.jwt.ttlMillis= 86400000
 
 
