--- a/SpringDependencyInjection/SpringDependencyInjection/pom.xml
+++ b/SpringDependencyInjection/SpringDependencyInjection/pom.xml
@@ -25,6 +25,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <!-- Used for dependency injection-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>5.2.5.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <build>
