--- a/Tutorials/ReditClone/src/main/resources/application.properties
+++ b/Tutorials/ReditClone/src/main/resources/application.properties
@@ -1,15 +1,16 @@
+app.title = My Spring Application with system properties 
 ############# Database Properties ###########################################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/reddit
-spring.datasource.username=root
+spring.datasource.url=
+spring.datasource.username=
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
 ############# Mail Properties ###########################################
-spring.mail.host=smtp.mailtrap.io
-spring.mail.port=25
+spring.mail.host=
+spring.mail.port=
 spring.mail.username=
 spring.mail.password=
 spring.mail.protocol=smtp
