--- a/Tutorials/practicingjps/pom.xml
+++ b/Tutorials/practicingjps/pom.xml
@@ -18,6 +18,7 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
+		<!--It interprets and compiles JSP views-->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
