--- a/Tutorials/practicingjps/pom.xml
+++ b/Tutorials/practicingjps/pom.xml
@@ -33,7 +33,6 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.20</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
@@ -50,6 +49,13 @@
 			<version>RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+		<!--Used for development, it loads the changes made on static files-->
 	</dependencies>
 
 	<build>
