--- a/Tutorials/redditclone/reddit_backend/pom.xml
+++ b/Tutorials/redditclone/reddit_backend/pom.xml
@@ -101,6 +101,7 @@
 			<version>0.2.0</version>
 		</dependency>
 
+		<!--Mapper stuffs-->
 		<dependency>
 			<groupId>com.github.marlonlom</groupId>
 			<artifactId>timeago</artifactId>
@@ -117,6 +118,26 @@
 			<version>${kotlin.version}</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!--Documentation stuffs-->
+		<!-- Spring fox things-->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
