--- a/Tutorials/redditclone/reddit-frontend/package.json
+++ b/Tutorials/redditclone/reddit-frontend/package.json
@@ -21,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^14.2.1",
     "ngx-webstorage": "^8.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
