--- a/Tutorials/redditclone/reddit-frontend/angular.json
+++ b/Tutorials/redditclone/reddit-frontend/angular.json
@@ -32,7 +32,9 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/bootstrap/scss/bootstrap.scss"
+              "node_modules/bootstrap/scss/bootstrap.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
             ]
