--- a/Tutorials/redditclone/reddit-frontend/package.json
+++ b/Tutorials/redditclone/reddit-frontend/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@tinymce/tinymce-angular": "^4.2.4",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "ngx-toastr": "^14.2.1",
